--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,19 +1,20 @@
 #
-# Copyright 2009 WSO2, Inc. (http://wso2.com)
+# Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
+# WSO2 Inc. licenses this file to you under the Apache License,
+# Version 2.0 (the "License"); you may not use this file except
+# in compliance with the License.
+# you may obtain a copy of the License at
 #
 # http://www.apache.org/licenses/LICENSE-2.0
 #
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
 #
-
 #
 # This is the log4j configuration file used by WSO2 Carbon
 #
@@ -22,11 +23,8 @@
 # can be changed using the WSO2 Carbon Management Console, and those
 # settings will override the settings in this file.
 #
-
 log4j.rootLogger=INFO, console, Default
-
 log4j.logger.org.wso2=INFO
-
 #Automation file apender
 log4j.appender.Default=org.apache.log4j.RollingFileAppender
 log4j.appender.Default.File=logs/automation.log
@@ -35,8 +33,6 @@ log4j.appender.Default.MaxFileSize=10MB
 log4j.appender.Default.MaxBackupIndex=10
 log4j.appender.Default.layout=org.apache.log4j.PatternLayout
 log4j.appender.Default.layout.ConversionPattern=%d{ISO8601} %-5p [%c] - %m%n
-
-
 #Automation console apender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
