Fix minor integration test configs

--- a/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
@@ -15,7 +15,9 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-proxyDirectoryRelativePath=/artifacts/ESB/config/proxies/StackExchange/
-requestDirectoryRelativePath=/artifacts/ESB/config/restRequests/StackExchange/
-resourceDirectoryRelativePath=/artifacts/ESB/config/resources/StackExchange/
-generated_param=Sample
+proxyDirectoryRelativePath=/artifacts/ESB/config/proxies/
+requestDirectoryRelativePath=/artifacts/ESB/config/restRequests/
+resourceDirectoryRelativePath=/artifacts/ESB/config/resources/
+site=stackapps
+accessToken=GWjmrS4F1E69Q(9j7SfZ6A))
+key=VndaFiwcvp24G8LPyYpKpg((
