--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <properties>
         <connector.name>stackexchange</connector.name>
         <integration.base.version>1.0.2</integration.base.version>
-        <product.ei.version>6.1.1</product.ei.version>
+        <product.ei.version>6.4.0</product.ei.version>
         <carbon.kernel.version>4.4.17</carbon.kernel.version>
         <automation.framework.utils.version>4.4.2</automation.framework.utils.version>
         <automation.framework.version>4.4.3</automation.framework.version>
@@ -44,7 +44,7 @@
         <bouncycastle.version>1.55</bouncycastle.version>
         <rampart.apache.version>1.6.1-wso2v18</rampart.apache.version>
         <rampart.wso2.version>1.6.1.wso2v18</rampart.wso2.version>
-        <skip-tests>true</skip-tests>
+        <skip-tests>false</skip-tests>
     </properties>
 
     <dependencies>
@@ -203,7 +203,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <encoding>UTF-8</encoding>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
@@ -219,7 +218,7 @@
                             <goal>attached</goal>
                         </goals>
                         <configuration>
-                            <finalName>${connector.name}-connector-1.0.0</finalName>
+                            <finalName>${connector.name}-connector-${version}</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
                             <filters>
                                 <filter>src/main/assembly/filter.properties</filter>
@@ -236,6 +235,7 @@
                 <version>2.12.4</version>
                 <inherited>false</inherited>
                 <configuration>
+                    <skipTests>${skip-tests}</skipTests>
                     <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
                     <disableXmlReport>false</disableXmlReport>
                     <parallel>false</parallel>
@@ -246,11 +246,15 @@
                     <systemProperties>
                         <property>
                             <name>framework.resource.location</name>
-                            <value>${basedir}/src/test/resources/</value>
+                            <value>
+                                ${basedir}/src/test/resources/
+                            </value>
                         </property>
                         <property>
                             <name>server.list</name>
-                            <value>ESB</value>
+                            <value>
+                                ESB
+                            </value>
                         </property>
                         <property>
                             <name>usedefaultlisteners</name>
@@ -258,7 +262,9 @@
                         </property>
                         <sec.verifier.dir>${basedir}/target/security-verifier/</sec.verifier.dir>
                         <maven.test.haltafterfailure>false</maven.test.haltafterfailure>
-                        <carbon.zip>${basedir}/repository/wso2ei-${product.ei.version}.zip</carbon.zip>
+                        <carbon.zip>
+                            ${basedir}/repository/wso2ei-${product.ei.version}.zip
+                        </carbon.zip>
                         <instr.file>${basedir}/src/test/resources/instrumentation.txt</instr.file>
                         <filters.file>${basedir}/src/test/resources/filters.txt</filters.file>
                         <property>
@@ -275,7 +281,6 @@
                         </property>
                     </systemProperties>
                     <workingDirectory>${basedir}/target</workingDirectory>
-                    <skipTests>${skip-tests}</skipTests>
                 </configuration>
             </plugin>
             <plugin>
@@ -309,7 +314,8 @@
                         <configuration>
                             <outputDirectory>${project.build.directory}/emma</outputDirectory>
                             <includeTypes>jar</includeTypes>
-                            <includeArtifactIds>emma,</includeArtifactIds>
+                            <includeArtifactIds>emma,
+                            </includeArtifactIds>
                         </configuration>
                     </execution>
                     <execution>
