Add StackExchange payload validation

--- a/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
@@ -19,3 +19,6 @@ proxyDirectoryRelativePath=/artifacts/ESB/config/proxies/
 requestDirectoryRelativePath=/artifacts/ESB/config/restRequests/
 resourceDirectoryRelativePath=/artifacts/ESB/config/resources/
 
+apiUrl=https://api.stackexchange.com/2.2
+apiEndReadFilter=/filters
+filter=default
