Add robustness to payload validation

--- a/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
@@ -20,5 +20,5 @@ requestDirectoryRelativePath=/artifacts/ESB/config/restRequests/
 resourceDirectoryRelativePath=/artifacts/ESB/config/resources/
 
 apiUrl=https://api.stackexchange.com/2.2
-apiEndReadFilter=/filters
-filter=default
+filterPath=/filters
+filterName=default
