Fix filter extraction issues

--- a/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
@@ -19,6 +19,7 @@ proxyDirectoryRelativePath=/artifacts/ESB/config/proxies/
 requestDirectoryRelativePath=/artifacts/ESB/config/restRequests/
 resourceDirectoryRelativePath=/artifacts/ESB/config/resources/
 
-apiUrl=https://api.stackexchange.com/2.2
+apiDomain=api.stackexchange.com
+apiVersion=2.2
 filterPath=/filters
 filterName=default
