Add reputation based test skipping

--- a/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
@@ -19,7 +19,15 @@ proxyDirectoryRelativePath=/artifacts/ESB/config/proxies/
 requestDirectoryRelativePath=/artifacts/ESB/config/restRequests/
 resourceDirectoryRelativePath=/artifacts/ESB/config/resources/
 
+# Api url
 apiDomain=api.stackexchange.com
 apiVersion=2.2
-filterPath=/filters
+
+# FilterKeyIterator
 filterName=default
+
+# PlaceHolder post
+placeHolderId=8236
+
+# Api Reputation hard limit
+reputationHardLimit=125
