Add generic based extraction logic

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -1,4 +1,8 @@
-site=stackapps
-accessToken=GWjmrS4F1E69Q(9j7SfZ6A))
+site=stackoverflow
+siteTags=java
+siteUserIds=1;2;3;4
+accessToken=h(3RdosVjgVAvdMoWAhS4w))
 key=VndaFiwcvp24G8LPyYpKpg((
+placeHolderSite=stackapps
+placeHolderId=8236
 
