--- a/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
@@ -18,12 +18,28 @@
 proxyDirectoryRelativePath=/artifacts/ESB/config/proxies/
 requestDirectoryRelativePath=/artifacts/ESB/config/restRequests/
 resourceDirectoryRelativePath=/artifacts/ESB/config/resources/
-# Api url
+
+# Site fallback properties
+site=stackoverflow
+siteTags=java
+siteUserIds=1;2;3;4
+
+# Api url properties
 apiDomain=api.stackexchange.com
 apiVersion=2.2
-# FilterKeyIterator
+
+# PlaceHolder fallback properties
+placeHolderSite=stackapps
+
+# Filter properties
 filterName=default
-# PlaceHolder post
-placeHolderId=8236
-# Api Reputation hard limit
-reputationHardLimit=125
+
+# Api response paging properties
+pagesize=10
+page=1
+fromdate=
+todate=
+min=10
+max=100
+sort=votes
+order=desc
