Add token invalidated note

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -1,6 +1,7 @@
 site=stackoverflow
 siteTags=java
 siteUserIds=1;2;3;4
+# This token is invalidated. Here only as an example.
 accessToken=h(3RdosVjgVAvdMoWAhS4w))
 key=VndaFiwcvp24G8LPyYpKpg((
 placeHolderSite=stackapps
