Clean up the main test configurations

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -1,8 +1,8 @@
 site=stackoverflow
-siteTags=java
+# siteTags=java
 siteUserIds=1;2;3;4
 # This token is invalidated. Here only as an example.
-accessToken=h(3RdosVjgVAvdMoWAhS4w))
+accessToken=7rjI76EVmSKBmc9wYDsVgw))
 key=VndaFiwcvp24G8LPyYpKpg((
 placeHolderSite=stackapps
 placeHolderQId=8236
