--- a/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/stackexchange.properties
@@ -21,7 +21,7 @@ resourceDirectoryRelativePath=/artifacts/ESB/config/resources/
 
 # Site fallback properties
 site=stackoverflow
-siteTags=java
+# siteTags=java
 siteUserIds=1;2;3;4
 
 # Api url properties
