Fix typos in properties file

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -1,11 +1,11 @@
-# properties related to App
+# Properties related to App
 # =========================
 site=stackoverflow
 # This token is invalidated. Here only as an example.
 accessToken=7rjI76EVmSKBmc9wYDsVgw))
 key=VndaFiwcvp24G8LPyYpKpg((
 
-# Propertied related to Placeholder
+# Properties related to Placeholder
 # =================================
 # placeHolderSite=stackapps
 placeHolderQId=8236
