Move filter parameter from init

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -7,6 +7,6 @@ key=VndaFiwcvp24G8LPyYpKpg((
 
 # Properties related to Placeholder
 # =================================
-# placeHolderSite=stackapps
+placeHolderSite=stackapps
 placeHolderQId=8236
 # placeHolderAId=
