Add docs for answers

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -1,11 +1,22 @@
+# =========================
 # Properties related to App
 # =========================
-site=stackoverflow
+# Your Access Token (Mandatory)
 # This token is invalidated. Here only as an example.
 accessToken=7rjI76EVmSKBmc9wYDsVgw))
+# Your API key (Mandatory)
 key=VndaFiwcvp24G8LPyYpKpg((
-# Properties related to Placeholder
-# =================================
-placeHolderSite=stackapps
-placeHolderQId=8236
+# Site you prefer. e.g. stackoverflow, askubuntu.
+# site=
+
+# ==========================================
+# Properties related to Placeholder posts
+#
+# Non of the below values are mandatory.
+# If you don't give them it skips every test
+# which is affected from them. See more
+# information in INTEGRATION_TEST.md
+# ==========================================
+# placeHolderSite=
+# placeHolderQId=
 # placeHolderAId=
