Add java doc comments

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -17,6 +17,6 @@ key=VndaFiwcvp24G8LPyYpKpg((
 # which is affected from them. See more
 # information in INTEGRATION_TEST.md
 # ==========================================
-# placeHolderSite=
-# placeHolderQId=
+# placeHolderSite=stackapps
+# placeHolderQId=8236
 # placeHolderAId=
