Add a seperate site parameter for placeholder of question id

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -16,6 +16,7 @@ key=VndaFiwcvp24G8LPyYpKpg((
 # which is affected from them. See more
 # information in INTEGRATION_TEST.md
 # ==========================================
-# placeHolderSite=stackapps
-# placeHolderQId=8236
+placeHolderQSite=stackapps
+placeHolderQId=8236
+placeHolderASite=stackapps
 # placeHolderAId=
