Add unhandled logics in skipping test

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -3,11 +3,11 @@
 # =========================
 # Your Access Token (Mandatory)
 # This token is invalidated. Here only as an example.
-accessToken=7rjI76EVmSKBmc9wYDsVgw))
+accessToken=ZTrZvjG8mszbWhOF2C4Eew))
 # Your API key (Mandatory)
-key=VndaFiwcvp24G8LPyYpKpg((
+key=)wcADKioYwEEusOBoV468Q((
 # Site you prefer. e.g. stackoverflow, askubuntu.
-# site=
+site=stackoverflow
 # ==========================================
 # Properties related to Placeholder posts
 #
@@ -17,6 +17,6 @@ key=VndaFiwcvp24G8LPyYpKpg((
 # information in INTEGRATION_TEST.md
 # ==========================================
 placeHolderQSite=stackapps
-placeHolderQId=8236
-placeHolderASite=stackapps
-# placeHolderAId=
+placeHolderQId=8267
+placeHolderASite=stackoverflow
+placeHolderAId=54691135
