Fix formatting issues

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -1,13 +1,16 @@
 # =========================
 # Properties related to App
 # =========================
+#
 # Your Access Token (Mandatory)
-# This token is invalidated. Here only as an example.
-accessToken=ZTrZvjG8mszbWhOF2C4Eew))
+# accessToken=
+#
 # Your API key (Mandatory)
-key=)wcADKioYwEEusOBoV468Q((
+# key=XXXXXXXXXXXXXXXXXXXXXXXX
+#
 # Site you prefer. e.g. stackoverflow, askubuntu.
-site=stackoverflow
+# site=
+#
 # ==========================================
 # Properties related to Placeholder posts
 #
@@ -16,7 +19,10 @@ site=stackoverflow
 # which is affected from them. See more
 # information in INTEGRATION_TEST.md
 # ==========================================
-placeHolderQSite=stackapps
-placeHolderQId=8267
-placeHolderASite=stackoverflow
-placeHolderAId=54664724
+# Site and id of the placeholder question.
+# placeHolderQSite=
+# placeHolderQId=
+#
+# Site and id of the placeholder answer.
+# placeHolderASite=
+# placeHolderAId=
