Fix fomatting issues

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -6,7 +6,7 @@
 # accessToken=
 #
 # Your API key (Mandatory)
-# key=XXXXXXXXXXXXXXXXXXXXXXXX
+# key=
 #
 # Site you prefer. e.g. stackoverflow, askubuntu.
 # site=
