--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -3,13 +3,13 @@
 # =========================
 #
 # Your Access Token (Mandatory)
-# accessToken=
+accessToken=
 #
 # Your API key (Mandatory)
-# key=
+key=
 #
 # Site you prefer. e.g. stackoverflow, askubuntu.
-# site=
+site=
 #
 # ==========================================
 # Properties related to Placeholder posts
@@ -20,9 +20,9 @@
 # information in INTEGRATION_TEST.md
 # ==========================================
 # Site and id of the placeholder question.
-# placeHolderQSite=
-# placeHolderQId=
+placeHolderQSite=
+placeHolderQId=
 #
 # Site and id of the placeholder answer.
-# placeHolderASite=
-# placeHolderAId=
+placeHolderASite=
+placeHolderAId=
