Fix fomatting issues

--- a/repository/esb-connector-stackexchange.properties
+++ b/repository/esb-connector-stackexchange.properties
@@ -3,13 +3,13 @@
 # =========================
 #
 # Your Access Token (Mandatory)
-accessToken=
+accessToken=XXXXXXXXXXXXXXXXXXXXXXXX
 #
 # Your API key (Mandatory)
-key=
+key=XXXXXXXXXXXXXXXXXXXXXXXX
 #
 # Site you prefer. e.g. stackoverflow, askubuntu.
-site=
+site=stackoverflow
 #
 # ==========================================
 # Properties related to Placeholder posts
@@ -20,9 +20,9 @@ site=
 # information in INTEGRATION_TEST.md
 # ==========================================
 # Site and id of the placeholder question.
-placeHolderQSite=
-placeHolderQId=
+placeHolderQSite=stackapps
+placeHolderQId=8000
 #
 # Site and id of the placeholder answer.
-placeHolderASite=
-placeHolderAId=
+placeHolderASite=stackapps
+placeHolderAId=8000
